--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-    <h1>Recipes</h1>
+    <h1>Valentines Day Recipes</h1>
+
+    <img src="./valentines-day.jpg">
+
     <ul>
         <li><a href="./my-recipes/chocolate-covered-strawberries.html">Chocolate-Covered-Strawberries-Recipe</a></li>
         <li><a href="my-recipes/molten-lava-chocolate-cake.html">Molten-Lava-Chocolate-Cake-Recipe</a></li>
