Add index.html my-recipes/chocolate-covered-strawberries.html my-recipes/molten-lava-chocolate-cake.html my-recipes/nutella-crepes-with-berries.html stylesheet.css valentines-day.gif valentines-day.gif:Zone.Identifier

--- a/index.html
+++ b/index.html
@@ -6,18 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
-    <h1>Valentines Day Recipes</h1>
+    <h1 id='header'>Valentines Day Recipes</h1>
 
-    <img src="./valentines-day.jpg">
-
-    <ul>
-        <li><a href="./my-recipes/chocolate-covered-strawberries.html">Chocolate-Covered-Strawberries-Recipe</a></li>
-        <li><a href="my-recipes/molten-lava-chocolate-cake.html">Molten-Lava-Chocolate-Cake-Recipe</a></li>
-        <li><a href="my-recipes/nutella-crepes-with-berries.html">Nutella-Crepes-with-Berries-Recipe</a></li>
-    </ul>
+    <img src="./valentines-day.gif" alt="Picture of Candy Hearts" style="width:400px;height:auto;">
+    <h2 id='image label'>Celebrate your love with these recipes!</h2>
+    <div>
+        <ul>
+            <li><a href="./my-recipes/chocolate-covered-strawberries.html">Chocolate-Covered-Strawberries-Recipe</a>
+            </li>
+            <li><a href="my-recipes/molten-lava-chocolate-cake.html">Molten-Lava-Chocolate-Cake-Recipe</a></li>
+            <li><a href="my-recipes/nutella-crepes-with-berries.html">Nutella-Crepes-with-Berries-Recipe</a></li>
+        </ul>
+    </div>
+    <a href="#header">Return to top</a>
 </body>
 
 </html>
