--- a/my-recipes/chocolate-covered-strawberries.html
+++ b/my-recipes/chocolate-covered-strawberries.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-    <h1> Chocolate Covered Strawberries</h1>
+    <h1 id='header'> Chocolate Covered Strawberries</h1>
 
-    <img src="./chocolate-covered-strawberries-2.jpg">
+    <img src="./chocolate-covered-strawberries-2.jpg" alt="Chocolate covered starawberries"
+        style="width:400px;height:auto;">
 
     <h2>How to Make the Best Chocolate Covered Strawberries</h2>
 
@@ -56,6 +57,9 @@
             the chocolate with crushed nuts.</li>
         <li>Place the baking sheet in the refrigerator and chill for 30 minutes until the chocolate is set.</li>
     </ol>
+    <a href="#header">Return to top</a>
+    <p></p>
+    <a href="../index.html">Return to home page</a>
 </body>
 
 </html>
