--- a/my-recipes/molten-lava-chocolate-cake.html
+++ b/my-recipes/molten-lava-chocolate-cake.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <h1>Molten Chocolate Lava Cakes</h1>
+    <h1 id='header'>Molten Chocolate Lava Cakes</h1>
 
-    <img src="./molten-chocolate-lava-cakes.jpg">
+    <img src="./molten-chocolate-lava-cakes.jpg" alt="Molten chocolate lava cake" style="width:400px;height:auto;">
 
     <h2>How to Make the Best Molten Chocolate Lava Cakes</h2>
 
@@ -67,6 +67,9 @@
         <li>Add toppings (such as a scoop of vanilla ice cream, dusting with powdered sugar, garnishing with fresh
             fruit, or a drizzle of salted caramel sauce or chocolate sauce). Serve immediately.</li>
     </ol>
+    <a href="#header">Return to top</a>
+    <p></p>
+    <a href="../index.html">Return to home page</a>
 </body>
 
 </html>
