--- a/my-recipes/nutella-crepes-with-berries.html
+++ b/my-recipes/nutella-crepes-with-berries.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <h1> Nutella Crepes With Berries</h1>
+    <h1 id='header'> Nutella Crepes With Berries</h1>
 
-    <img src="./nutella-crepes-with-berries.jpg">
+    <img src="./nutella-crepes-with-berries.jpg" alt="Nutella crepes with berries" style="width:600px;height:auto;">
 
     <h2>How to Make the Best Nutella Crepes with Berries</h2>
 
@@ -50,6 +50,9 @@
             quarters and drizzle extra Nutella on top. Sprinkle some icing sugar on top.</li>
 
     </ol>
+    <a href="#header">Return to top</a>
+    <p></p>
+    <a href="../index.html">Return to home page</a>
 </body>
 
 </html>
